--- a/cudaTestProject/cudaTestProject.vcxproj
+++ b/cudaTestProject/cudaTestProject.vcxproj
@@ -86,9 +86,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ArrayQueue.h" />
+    <ClInclude Include="DS_definitions.h" />
+    <ClInclude Include="DS_timer.h" />
     <ClInclude Include="rmg.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DS_timer.cpp" />
     <ClCompile Include="os.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
